# goit-pythonweb-hw-01

./: README.md  logger.py  pyproject.toml
task-1/: factory.py
task-2/: solid_library.py
