[project]
name = "coit-pythonweb-hw-1"
version = "0.1.0"
description = ""
authors = [
    {name = "DaryPet",email = "d7akkord@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black (>=25.1.0,<26.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.17.1"

